[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.0.0-beta.20", features = ["rustls"]}
actix-form-data = "0.6.0-beta.11"
futures = "^0.3"
log = "^0.4"
anyhow = "^1.0"
thiserror = "^1.0"
env_logger = "^0.9"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"